# MeteoLens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_CONTRACT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOYMENT.md  LEGAL_ATTRIBUTION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  TROUBLESHOOTING.md  UI_UX.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  docker-entrypoint.prod.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py  v1.py
backend/app/core/: config.py  logging.py  observability.py  outbound_url.py  security.py
backend/app/db/: __init__.py  engine.py  repository.py
backend/app/geometry/: __init__.py  import_cli.py  loader.py  spatial.py  validation.py
backend/app/imgw/: __init__.py  archive.py  cache.py  client.py  refresh.py  scheduler.py  sources.py  station_mapping.py
backend/app/normalization/: __init__.py  models.py
backend/app/operations/: __init__.py  backup.py
backend/tests/: __init__.py  conftest.py  e2e_seed_cache.py  grib_fixtures.py  settings_helpers.py  test_archive_backfill.py  test_backup.py  test_cache.py  test_client.py  test_config.py  test_frontend_api.py  test_geometry.py  test_geometry_import.py  test_health.py  test_observation_history.py  test_oscar_synop_fetcher.py  test_parsers.py  test_power_user.py  test_prod_entrypoint.py  test_product_download_url_validation.py  test_product_refresh.py  test_product_rendering.py  test_products.py  test_refresh.py  test_refresh_api.py  test_sources.py  test_stage16_api_client.py  test_stage19_deployment.py  test_stage19_security.py  test_synop_station_mapping.py
(+154 files in other folders)
